# gtm-advisor

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  alembic.ini  pyproject.toml  pytest.ini
.claude/agents/: gtm-dev.md  test-writer.md
.claude/context/: gold-standards.md
.claude/hooks/: agent-pattern-validator.md  anti-amnesia.md
.claude/rules/: agent-pattern.md  naming.md
.claude/skills/: add-agent.md  add-integration.md
agents/campaign_architect/: pyproject.toml
agents/campaign_architect/src/: __init__.py  agent.py
agents/campaign_monitor/: pyproject.toml
agents/campaign_monitor/src/: __init__.py  agent.py
agents/campaign_strategist/: pyproject.toml
agents/campaign_strategist/src/: __init__.py  agent.py
agents/company_enricher/: pyproject.toml
agents/company_enricher/src/: __init__.py  agent.py
agents/competitor_analyst/: pyproject.toml
agents/competitor_analyst/src/: __init__.py  agent.py
agents/core/: pyproject.toml
agents/core/src/: __init__.py  base_agent.py  mcp_integration.py  tool_empowered_agent.py
agents/crm_sync/: pyproject.toml
agents/crm_sync/src/: __init__.py  agent.py
agents/customer_profiler/: pyproject.toml
agents/customer_profiler/src/: __init__.py  agent.py
agents/edm_designer/: pyproject.toml
agents/edm_designer/src/: __init__.py  agent.py
agents/graphic_designer/: pyproject.toml
agents/graphic_designer/src/: __init__.py  agent.py
agents/gtm_strategist/: pyproject.toml
agents/gtm_strategist/src/: __init__.py  agent.py
agents/lead_enrichment/: pyproject.toml
agents/lead_enrichment/src/: __init__.py  agent.py
agents/lead_hunter/: pyproject.toml
agents/lead_hunter/src/: __init__.py  agent.py
agents/market_intelligence/: pyproject.toml
agents/market_intelligence/src/: __init__.py  agent.py
agents/outreach_executor/: pyproject.toml
agents/outreach_executor/src/: __init__.py  agent.py
agents/signal_monitor/: pyproject.toml
agents/signal_monitor/src/: __init__.py  agent.py
agents/social_publisher/: pyproject.toml
agents/social_publisher/src/: __init__.py  agent.py
agents/strategy_proposer/: pyproject.toml
agents/strategy_proposer/src/: __init__.py  agent.py
agents/vertical_intelligence/: pyproject.toml
agents/vertical_intelligence/src/: __init__.py  agent.py
agents/workforce_architect/: pyproject.toml
agents/workforce_architect/src/: __init__.py  agent.py
deployment/docker/: Dockerfile.dashboard  Dockerfile.gateway  docker-compose.production.yml  docker-compose.yml
docs/: COMPONENT_STRUCTURE.md  DATA_SOURCE_ALTERNATIVES.md  GAP_ANALYSIS.md  KNOWLEDGE_WEB_ARCHITECTURE.md  UI_UX_SPECIFICATION.md  index.md
docs/adr/: 0001-four-layer-architecture.md
docs/api/: agents.md  gateway.md
docs/guides/: agent-development.md  getting-started.md  tool-development.md
docs/launch/: content-studio-qa.md  cycle-1-redteam.md  cycle-2-redteam.md  cycle-3-redteam.md  cycle-4-incorporation-plan.md  cycle-4-redteam.md  cycle-5-incorporation-plan.md  dangerous-action-policy.md  execution-verification.md  feature-flags.md  launch-package.md  naming-conventions.md  promise-scope-audit.md  workstream-status.md
docs/ops/: scheduler-reference.md  vertical-intelligence-playbook.md
docs/research/: campaign-execution-implementation-plan.md  campaign-execution-pipeline-research.md  campaign-roadmap-red-team.md  campaign-strategic-planner-design.md  competitive-landscape.md  gtm-roadmap-canvas-research.md  platform-flow-architecture.md  today-page-competitive-research.md  todaypage-redesign-plan.md  ui-density-copywriting-research.md
memory/: MEMORY.md  frontend.md  gap_analysis.md
scripts/: backfill_demo_signals.py  build_knowledge_base.py  build_knowledge_base_books.py  complete_embeddings.py  fix_chapter_metadata.py  ingest_marketing_intel.py  init_db.py  migrate.py  run_vertical_intel_marketing_comms.py  seed_himeetai.py  seed_marketing_comms.py  seed_regulatory_articles.py  sync_companies.py  sync_to_qdrant.py  synthesize_domain_guides.py
services/dashboard/: index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
services/dashboard/src/: App.tsx  index.css  types.ts
services/dashboard/src/api/: approvals.ts  attribution.ts  client.ts  companies.ts  index.ts  roadmap.ts  signals.ts  strategies.ts  transforms.ts  workforce.ts  (+2 more)
services/gateway/: pyproject.toml
services/gateway/src/: __init__.py  agents_registry.py  cache.py  errors.py  main.py  scheduler.py
services/gateway/src/auth/: __init__.py  dependencies.py  launch_mode.py  models.py  utils.py
services/gateway/src/caches/: __init__.py  analysis_cache.py  enrichment_cache.py  perplexity_cache.py
services/gateway/src/middleware/: __init__.py  auth.py  rate_limit.py
services/gateway/src/routers/: __init__.py  agents.py  analysis.py  approvals.py  attribution.py  auth.py  campaigns.py  companies.py  company_agents.py  competitors.py  documents.py  exports.py  health.py  icps.py  insights.py  leads.py  market_data.py  playbooks.py  roadmap.py  sequences.py  settings.py  signals.py  strategies.py  strategy.py  webhooks.py  websocket.py  workforce.py
services/gateway/src/schemas/: __init__.py  campaigns.py  common.py  competitors.py  icps.py  insights.py  leads.py  settings.py
services/gateway/src/services/: __init__.py  clarification.py  journey.py  playbook_service.py  sequence_engine.py  task_decomposition.py  workforce_executor.py
services/gateway/src/utils/: __init__.py  company_utils.py
tests/: conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_agent_bus.py  test_auth_api.py  test_company_access.py  test_mcp_servers.py
tests/unit/: __init__.py  test_auth.py  test_knowledge_web.py  test_launch_mode_deny.py  test_rc_regression.py  test_token_blacklist.py
tests/unit/agents/: test_agent_checks.py  test_base_agent.py  test_campaign_architect.py  test_lead_hunter_enrichment.py  test_vertical_intelligence.py
tests/unit/core/: test_signatures.py
tests/unit/governance/: test_constraint_envelope.py
(+64 files in other folders)
