[project]
name = "gtm-advisor"
version = "0.1.0"
description = "Self-Service Agentic AI Platform for GTM Advisory - Singapore SMEs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "GTM Advisor Team" }]
keywords = ["ai", "agents", "gtm", "marketing", "lead-generation", "singapore"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.30",
    "anthropic>=0.25",
    "instructor>=1.0",
]
perplexity = [
    "openai>=1.30",  # Perplexity uses OpenAI-compatible API
]
newsapi = [
    "newsapi-python>=0.2",
]
eodhd = [
    "eodhd>=1.0",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.0",
]
redis = [
    "redis>=5.0",
]
postgres = [
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
]
observability = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-jaeger>=1.21",
    "prometheus-client>=0.20",
]
vectors = [
    "qdrant-client>=1.9",
    "sentence-transformers>=2.7",
]
all = [
    "gtm-advisor[llm,perplexity,newsapi,eodhd,api,redis,postgres,observability,vectors]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "respx>=0.21",  # HTTP mocking
]

[project.scripts]
gtm-advisor = "services.gateway.src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages", "agents", "services"]

[tool.uv.workspace]
members = ["packages/*", "agents/*", "services/*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["packages", "agents", "services", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["packages", "agents", "services"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow-running tests",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["newsapi.*", "eodhd.*"]
ignore_missing_imports = true
