[project]
name = "gtm-advisor-campaign-architect"
version = "0.1.0"
description = "Campaign Architect Agent - Designs marketing campaigns"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
