[project]
name = "gtm-advisor-customer-profiler"
version = "0.1.0"
description = "Customer Profiler Agent - Builds ideal customer personas"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
