[project]
name = "gtm-advisor-lead-enrichment"
version = "0.1.0"
description = "Lead Enrichment Agent — validates and enriches leads before outreach"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
