[project]
name = "gtm-advisor-lead-hunter"
version = "0.1.0"
description = "Lead Hunter Agent - Discovers and qualifies potential leads for Singapore SMEs"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
