[project]
name = "gtm-advisor-outreach-executor"
version = "0.1.0"
description = "Outreach Executor Agent - Sends personalised outreach emails"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
