[project]
name = "gtm-advisor-signal-monitor"
version = "0.1.0"
description = "Signal Monitor Agent — always-on market intelligence surveillance"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
