[project]
name = "gtm-advisor-vertical-intelligence"
version = "0.1.0"
description = "Vertical Intelligence Agent — deep industry analysis"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
