[project]
name = "gtm-advisor-gateway"
version = "0.1.0"
description = "API Gateway service for GTM Advisor"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0",
    "email-validator>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
